2011-09-04  Vadim Kurland  <vadim@netcitadel.com>

	* IPTImporter.cpp (IPTImporter::isSupportedTable): see #2653
	Importer for iptables checks that netfilter table used in
	the original iptables config is one of the tables we support.
	Currently only "filter", "mangle" and "nat" are supported. Also
	see #2651, #2652

	* FWObjectDatabase_tree_ops.cpp (_recursively_copy_subtree): see
	#2654 fixes GUI crash that occured if user copied a rule from file
	A to file B, then closed file B, opened file C and tried to copy
	the same rule from A to C'

2011-08-30  Vadim Kurland  <vadim@netcitadel.com>

	* fixes SF bug 3247094 "Nomenclature of IP address edit dialog".
	Network ipv6 dialog says "Prefix length".

	* linux24advanceddialog_q.ui: fixes SF bug 3302121 "cosmetic
	mis-format in fwb Linux paths dialog"

	* DNSNameDialog.cpp (applyChanges): fixes SF bug 3388055 Adding a
	"DNS Name" with a trailing space causes failure.

2011-08-25  Vadim Kurland  <vadim@netcitadel.com>

	* see #2646 and SF bug 3395658: Added few ipv4 and ipv6 network
	objects to the Standard objects library: TEST-NET-2,
	TEST-NET-3 (RFC 5735, RFC 5737), translated-ipv4, mapped-ipv4,
	Teredo, unique-local and few others.

	* ObjectManipulator.cpp (openLibForObject): fixes #2648 "right
	mouse click on firewall object in "Deleted objects" library causes
	GUI crash"

	* PolicyCompiler_ipt.cpp (processNext): fixes #2650 "rules with
	address range that includes firewall address in Src are placed in
	OUTPUT chain even though addresses that do not match the firewall
	should go in FORWARD"

2011-08-14  Vadim Kurland  <vadim@netcitadel.com>

	* InetAddr.cpp (InetAddr::isValidV4Netmask): function
	InetAddr::isValidV4Netmask() checks that netmask represented by
	the object consists of a sequence of "1" bits, followed by the
	sequence of "0" bits and therefore does not have zeroes in the
	middle.

	* NetworkDialog.cpp (NetworkDialog::validate): added check to make