@@ -127,6 +127,13 @@
     </p>
   </li>
 
+  <li>
+    <p>
+	see #2655 Interface names are not allowed to have dash "-" even
+	with interface verification off. We should allow "-" in the
+	interface name for Cisco IOS
+    </p>
+  </li>
 </ul>
 
 
