@@ -1,3 +1,10 @@
+2011-09-19  Vadim Kurland  <vadim@netcitadel.com>
+
+	* iosInterfaces.cpp (iosInterfaces::basicValidateInterfaceName):
+	see #2655 Interface names are not allowed to have dash "-" even
+	with interface verification off. We should allow "-" in the
+	interface name for Cisco IOS
+
 2011-09-04  Vadim Kurland  <vadim@netcitadel.com>
 
 	* IPTImporter.cpp (IPTImporter::isSupportedTable): see #2653
